# blink

./: .gitignore  Cargo.toml  README.md
packaging/usr/share/applications/: com.github.sachesi.blink.desktop
po/: blink.pot  uk_UA.po
src/: main.rs  markdown.rs
