[package]
name = "blink"
version = "0.1.1"
edition = "2024"
authors = ["sachesi <xsachesi@pm.me>"]
license = "GPL-3.0-or-later"

[dependencies]
gtk = { package = "gtk4", version = "0.11", features = ["v4_10"] }
adw = { package = "libadwaita", version = "0.9", features = ["v1_6"] }
tokio = { version = "1.43", features = ["rt-multi-thread", "macros", "fs"] }
pulldown-cmark = "0.13"
glib = "0.20"
gettext-rs = { version = "0.7.7", features = ["gettext-system"] }
sourceview5 = "0.11.0"
